[tool.poetry]
name = "thread-executor"
version = "0.1.2"
description = "A Python library for executing tasks in parallel with threads and queues"
authors = ["TuanDC <tuandao864@gmail.com>"]
maintainers = ["TuanDC <tuandao864@gmail.com>"]
packages = [
    { include = "executor" },
    { include = "executor/*.py" },
]
readme = "README.md"
homepage = "https://pypi.org/project/thread-executor"
#repository = "https://github.com/HKer-MuCoi/pielock"
keywords = ["multi thread", "threading", "concurency", "worker pool"]

[tool.poetry.dependencies]
python = "^3.6.2"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pytest-sugar = "^0.9.4"
tox = "^3.24.4"
tox-pyenv = "^1.1.0"
pytest-watch = "^4.2.0"
poetry = "^1.3.1"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
